--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ color: #000;
     position: relative;
 }
 
-.containIcon img{
+.containIcon .eye img{
     width: 20px;
     position: absolute;
     top: 7px;
@@ -79,6 +79,10 @@ color: #000;
     position: absolute;
     top:9px;
     left: 10px;
+}
+
+.margin-bottom-20px{
+    margin-bottom: 20px;
 }
 
 @media screen and (max-width:767px){
